# sysu-jwxt-mcp

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  README.zh-CN.md  pyproject.toml
docs/: login-observation.md  mcp.md  rest.md  session-import.md
docs/dev/: implementation-plan.md  live-discovery.md  login-observation.md  session-import.md
scripts/: browser_probe_timetable.py  import_session.py  qr_login_cli.py  session_validity_monitor.py
scripts/dev/: browser_probe_exams.py  fetch_timetable_via_browser.py  observe_login.py  probe_exam_bundle.py  probe_exam_query.py  probe_grades_query.py  probe_timetable.py
src/sysu_jwxt_agent/: api.py  bootstrap.py  config.py  main.py  mcp_server.py  schemas.py
src/sysu_jwxt_agent/services/: auth.py  browser.py  cache.py  jwxt.py  keepalive.py
tests/: test_api.py  test_mcp.py
